[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = vlstore
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = Fast variable-length record storage tools using blosc2
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions
    blosc2
    xxhash
    srsly
    pytest
    numpy >= 2.10.1

[options.packages.find]
where = src
